fix the service component on mobile responsiveness

--- a/src/components/main/ourService/service.scss
+++ b/src/components/main/ourService/service.scss
@@ -104,6 +104,9 @@
 // Media Query______________________________________
 
 @media only screen and (max-width: 390px) {
+  .service-container {
+    display: none;
+  }
   .bg-service {
     height: 40vh;
     width: 100%;
